fix media queries on mobile and upload new logo

--- a/css/styles.css
+++ b/css/styles.css
@@ -75,7 +75,7 @@ button {
     outline: none;
 }
 
-@media only screen and (max-width: 760px) {
+@media only screen and (max-device-width: 760px) {
     body {
     background: black;
     margin: 0;
